--- a/src/main/webapp/WEB-INF/template/LayoutPadrao.xhtml
+++ b/src/main/webapp/WEB-INF/template/LayoutPadrao.xhtml
@@ -34,9 +34,9 @@
 					<p:menubar styleClass="menu-sistema"  style="background-color: #A80000 !important;">
 						<p:submenu label="Cadastros" >
 							<p:menuitem value="Fabricante"  outcome="/fabricante/PesquisaFabricantes.xhtml" />
-							<p:menuitem value="Modelo Carro"  />
-							<p:menuitem value="Acessório" />
-							<p:menuitem value="Carro" />
+							<p:menuitem value="Modelo Carro"  outcome="/modeloCarro/PesquisaModeloCarro.xhtml" />
+							<p:menuitem value="Acessório" outcome="/acessorio/PesquisaAcessorios.xhtml" />
+							<p:menuitem value="Carro" outcome="/carro/PesquisaCarros.xhtml" />
 							<p:separator/>
 							<p:menuitem value="Funcionário" />
 							<p:menuitem value="Motorista" />
