--- a/src/main/webapp/WEB-INF/template/LayoutPadrao.xhtml
+++ b/src/main/webapp/WEB-INF/template/LayoutPadrao.xhtml
@@ -41,7 +41,7 @@
 							<p:menuitem value="Funcionário" />
 							<p:menuitem value="Motorista" />
 						</p:submenu>
-						<p:menuitem value="Novo Aluguel" />
+						<p:menuitem value="Novo Aluguel" outcome="/aluguel/NovoAluguel.xhtml" />
 						<p:submenu label="Relatórios">
 							<p:menuitem value="Receita por carro" />
 						</p:submenu>
