--- a/src/main/webapp/WEB-INF/template/LayoutPadrao.xhtml
+++ b/src/main/webapp/WEB-INF/template/LayoutPadrao.xhtml
@@ -6,13 +6,13 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui">
 
-	<h:head>
+	<h:head >
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <title><ui:insert name="titulo">Sistema de Locadora de Veículo</ui:insert></title>
         <h:outputStylesheet library="css" name="sistema.css"/>
 	</h:head>
 
-	<h:body>
+	<h:body styleClass = "wallpaper">
 		<p:ajaxStatus styleClass="ajax-status">
 			<f:facet name="start">
 <!-- 				<h:graphicImage library="imagens" name="carregando.gif"/> -->
