--- a/src/main/webapp/resources/css/sistema.css
+++ b/src/main/webapp/resources/css/sistema.css
@@ -5,6 +5,7 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 	margin: 0px;
 	font-weight: normal;
+	color: #ffffff !important;
 }
 
 .wallpaper {
@@ -40,7 +41,8 @@ h1 {
 	font-size: 24px;
 	font-weight: 500;
 	padding: 0px;
-	margin: 0px
+	margin: 0px;
+	color: #ffffff !important;
 }
 
 .rotulo {
