Mapeando herança com tabela única

--- a/src/main/webapp/WEB-INF/template/LayoutPadrao.xhtml
+++ b/src/main/webapp/WEB-INF/template/LayoutPadrao.xhtml
@@ -39,11 +39,11 @@
 							<p:menuitem value="Carro" outcome="/carro/PesquisaCarros.xhtml" />
 							<p:separator/>
 							<p:menuitem value="Funcionário" />
-							<p:menuitem value="Motorista" />
+							<p:menuitem value="Motorista" outcome="/motorista/PesquisaMotoristas.xhtml"/>
 						</p:submenu>
 						<p:menuitem value="Novo Aluguel" outcome="/aluguel/NovoAluguel.xhtml" />
 						<p:submenu label="Relatórios">
-							<p:menuitem value="Receita por carro" />
+							<p:menuitem value="Receita por Carro" />
 						</p:submenu>
 					</p:menubar>
 				</h:form>
